[gd_scene load_steps=15 format=3 uid="uid://cketbs1nnfl34"]

[ext_resource type="Script" path="res://script/Enemies/Heart.gd" id="1_snmhd"]
[ext_resource type="Texture2D" uid="uid://ctgt3butf0oy4" path="res://Sprites/Enemies/HeartAlive.png" id="2_w1hbd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_itlkr"]
size = Vector2(109, 151)

[sub_resource type="CircleShape2D" id="CircleShape2D_fkqk1"]
radius = 958.501

[sub_resource type="AtlasTexture" id="AtlasTexture_hbfik"]
atlas = ExtResource("2_w1hbd")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofm47"]
atlas = ExtResource("2_w1hbd")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhx5p"]
atlas = ExtResource("2_w1hbd")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q51lv"]
atlas = ExtResource("2_w1hbd")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbvwy"]
atlas = ExtResource("2_w1hbd")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_js1y8"]
atlas = ExtResource("2_w1hbd")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o888j"]
atlas = ExtResource("2_w1hbd")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wike"]
atlas = ExtResource("2_w1hbd")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_kov66"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbfik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofm47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhx5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q51lv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbvwy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_js1y8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o888j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wike")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_7riju"]
radius = 937.157

[node name="Heart" type="CharacterBody2D"]
scale = Vector2(2, 2)
collision_layer = 4
collision_mask = 31
script = ExtResource("1_snmhd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-8.5, -52.5)
shape = SubResource("RectangleShape2D_itlkr")

[node name="Shooting_Position" type="Marker2D" parent="."]
position = Vector2(0, 113)

[node name="Mines_ROF" type="Timer" parent="."]
autostart = true

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource("CircleShape2D_fkqk1")
debug_color = Color(0, 0.622677, 0.544081, 0.42)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -52.5)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_kov66")
autoplay = "default"
frame_progress = 0.193479

[node name="Area_Of_Attack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_Of_Attack"]
shape = SubResource("CircleShape2D_7riju")

[node name="ROF" type="Timer" parent="."]

[connection signal="timeout" from="Mines_ROF" to="." method="_on_mines_rof_timeout"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_player_detector_body_exited"]
[connection signal="body_entered" from="Area_Of_Attack" to="." method="_on_area_of_attack_body_entered"]
[connection signal="body_exited" from="Area_Of_Attack" to="." method="_on_area_of_attack_body_exited"]
[connection signal="timeout" from="ROF" to="." method="_on_rof_timeout"]
